xpcom/glue/nsAutoLock.cpp
@@ -46,7 +46,7 @@
 #include "nsDebug.h"
 #include "nsVoidArray.h"
 
-#ifdef NS_TRACE_MALLOC_XXX
+#ifdef NS_TRACE_MALLOC
 # include <stdio.h>
 # include "nsTraceMalloc.h"
 #endif
@@ -60,7 +60,7 @@ static const char* const LockTypeNames[] = {"Lock", "Monitor", "CMonitor"};
 struct nsNamedVector : public nsVoidArray {
     const char* mName;
 
-#ifdef NS_TRACE_MALLOC_XXX
+#ifdef NS_TRACE_MALLOC
     // Callsites for the inner locks/monitors stored in our base nsVoidArray.
     // This array parallels our base nsVoidArray.
     nsVoidArray mInnerSites;
@@ -257,7 +257,7 @@ static PRBool WellOrdered(const void* addr1, const void* addr2,
                     // Assert (addr1 < addr2) into the order table.
                     // XXX fix plvector/nsVector to use const void*
                     vec1->AppendElement((void*) addr2);
-#ifdef NS_TRACE_MALLOC_XXX
+#ifdef NS_TRACE_MALLOC
                     vec1->mInnerSites.AppendElement((void*) callsite2);
 #endif
                 }
@@ -285,8 +285,8 @@ nsAutoLockBase::nsAutoLockBase(void* addr, nsAutoLockType type)
             // lock at all, and NSPR will assert if you enter it.
         } else {
             const void* node =
-#ifdef NS_TRACE_MALLOC_XXX
-                NS_GetStackTrace(1)
+#ifdef NS_TRACE_MALLOC
+                (const void*)NS_TraceMallocGetStackTrace();
 #else
                 nsnull
 #endif
@@ -305,12 +305,14 @@ nsAutoLockBase::nsAutoLockBase(void* addr, nsAutoLockType type)
                             vec2->mName ? vec2->mName : "",
                             LockTypeNames[type],
                             addr);
-#ifdef NS_TRACE_MALLOC_XXX
+#ifdef NS_TRACE_MALLOC
                 fprintf(stderr, "\n*** %s\n\nCurrent stack:\n", buf);
-                NS_DumpStackTrace(node, stderr);
+                NS_TraceMallocPrintStackTrace(stderr,
+                                              NS_TraceMallocGetStackTrace());
 
                 fputs("\nPrevious stack:\n", stderr);
-                NS_DumpStackTrace(vec2->mInnerSites.ElementAt(i2), stderr);
+                NS_TraceMallocPrintStackTrace(stderr,
+                    (nsTMStackTraceIDStruct *)vec2->mInnerSites.ElementAt(i2));
                 putc('\n', stderr);
 #endif
                 NS_ERROR(buf);
